--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<script src="js/jquery-ui.min.js"></script>
 
         <script src="js/jquery.transit.min.js"></script>
+        <script src="js/fastclick.js"></script>
 		
 		<script src="js/scripts.js"></script>
 	</body>
