Add flappy bird font + fixed collision detection.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
   </head>
 
   	<body>
+        <div class="hud">
+            <div class="intro">
+                <h2 class="title">Super Flappy Bird</h2>
+                <h1 class="get-ready">Get Ready</h1>
+            </div>
+            <div class="game-over">
+                <h1>Game Over</h1>
+            </div>
+        </div>
         <div class="world">
 
             <div class="bird"></div>
