Add menu, restart option, score tracking, and variable speed across device widths

--- a/index.html
+++ b/index.html
@@ -33,9 +33,23 @@
             <div class="intro">
                 <h2 class="title">Super Flappy Bird</h2>
                 <h1 class="get-ready">Get Ready</h1>
+                <div class="click-to-start">
+                    <h3>Click or Tap</h3>
+                </div>
+            </div>
+            <div class="score">
+                <h1 class="number">0</h1>
             </div>
             <div class="game-over">
+                <h2 class="title">Super Flappy Bird</h2>
                 <h1>Game Over</h1>
+                <div class="scoreboard">
+                    <h3 style="margin: 0px; padding: 5px 0px">Score:</h3>
+                    <h1 class="number" style="margin:0px; padding: 10px">0</h1>
+                </div>
+                <div class="restart">
+                    <h3>Play</h3>
+                </div>
             </div>
         </div>
         <div class="world">
